--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       margin: 16px;
     }
   </style>
-  <script src="npm/jquery/jquery.min.js">
+  <script src="jquery.min.js">
   </script>
   <script>
     $(document).ready(function () {
